--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,39 +1,33 @@
 {
-  "files.eol": "\n",
-  "editor.tabSize": 2,
-  "editor.insertSpaces": false,
-  "files.watcherExclude": {
-    "**/.git/objects/**": true,
-    "**/node_modules/**": true
-  },
-  "search.exclude": {
-    ".tmp": true,
-    "typings": true
-  },
-  "json.schemas": [
-    {
-      "fileMatch": [
-        "/pbiviz.json"
-      ],
-      "url": "./node_modules/powerbi-visuals-tools/templates/visuals/.api/v1.7.0/schema.pbiviz.json"
-    },
-    {
-      "fileMatch": [
-        "/capabilities.json"
-      ],
-      "url": "./node_modules/powerbi-visuals-tools/templates/visuals/.api/v1.7.0/schema.capabilities.json"
-    },
-    {
-      "fileMatch": [
-        "/dependencies.json"
-      ],
-      "url": "./node_modules/powerbi-visuals-tools/templates/visuals/.api/v1.6.0/schema.dependencies.json"
-    }
-  ],
-  "[typescript]": {
-    "editor.formatOnSave": true
-  },
-  "[typescriptreact]": {
-    "editor.formatOnSave": true
-  }
+	"files.eol": "\n",
+	"editor.tabSize": 2,
+	"editor.insertSpaces": false,
+	"files.watcherExclude": {
+		"**/.git/objects/**": true,
+		"**/node_modules/**": true
+	},
+	"search.exclude": {
+		".tmp": true,
+		"typings": true
+	},
+	"json.schemas": [
+		{
+			"fileMatch": ["/pbiviz.json"],
+			"url": "./powerbi-heat-streams/node_modules/powerbi-visuals-tools/templates/visuals/.api/v1.7.0/schema.pbiviz.json"
+		},
+		{
+			"fileMatch": ["/capabilities.json"],
+			"url": "./powerbi-heat-streams/node_modules/powerbi-visuals-tools/templates/visuals/.api/v1.7.0/schema.capabilities.json"
+		},
+		{
+			"fileMatch": ["/dependencies.json"],
+			"url": "./powerbi-heat-streams/node_modules/powerbi-visuals-tools/templates/visuals/.api/v1.6.0/schema.dependencies.json"
+		}
+	],
+	"[typescript]": {
+		"editor.formatOnSave": true
+	},
+	"[typescriptreact]": {
+		"editor.formatOnSave": true
+	}
 }
