--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -20,6 +20,6 @@ jobs:
       - run: yarn ci
         env:
           CI: true
-      - run: cd powerbi-heat-streams
+      - run: cd pbi-heat-streams
       - run: npm install
       - run: npm run build
