--- a/pbi-heat-streams/package.json
+++ b/pbi-heat-streams/package.json
@@ -8,6 +8,7 @@
 		"clean": "rimraf .tmp dist",
 		"start": "pbiviz start",
 		"package": "pbiviz package",
+		"audit": "npm-audit-ci",
 		"lint": "tslint -c tslint.json -p tsconfig.json"
 	},
 	"dependencies": {
@@ -18,20 +19,21 @@
 		"@types/node": "^13.7.0",
 		"@types/react": "^16.9.19",
 		"@types/react-dom": "^16.9.5",
+		"core-js": "3.2.1",
 		"d3-array": "^2.4.0",
 		"lodash": "^4.17.15",
+		"npm-audit-ci": "^1.2.1",
 		"powerbi-models": "^1.3.2",
 		"powerbi-visuals-api": "^2.6.1",
+		"powerbi-visuals-tools": "^3.1.9",
 		"powerbi-visuals-utils-dataviewutils": "^2.2.1",
 		"powerbi-visuals-utils-svgutils": "^2.2.1",
 		"powerbi-visuals-utils-typeutils": "^2.2.1",
-		"core-js": "3.2.1",
-		"powerbi-visuals-tools": "^3.1.9",
 		"powerbi-visuals-webpack-plugin": "^2.2.2",
-		"regenerator-runtime": "^0.13.3",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
-		"react-heat-streams": "file:./ext/react-heat-streams"
+		"react-heat-streams": "file:./ext/react-heat-streams",
+		"regenerator-runtime": "^0.13.3"
 	},
 	"devDependencies": {
 		"rimraf": "^3.0.2",
