--- a/pbi-heat-streams/package.json
+++ b/pbi-heat-streams/package.json
@@ -17,7 +17,7 @@
 		"@essex/d3-coloring-scales": "^3.0.0",
 		"@types/d3-array": "^2.0.0",
 		"@types/node": "^13.7.0",
-		"@types/react": "^16.9.19",
+		"@types/react": "^16.9.22",
 		"@types/react-dom": "^16.9.5",
 		"core-js": "3.2.1",
 		"d3-array": "^2.4.0",
@@ -40,7 +40,7 @@
 		"ts-loader": "6.1.0",
 		"tslint": "^5.18.0",
 		"tslint-microsoft-contrib": "^6.2.0",
-		"typescript": "3.6.3",
+		"typescript": "^3.8.2",
 		"powerbi-visuals-tools": "^3.1.9"
 	}
 }
